src/test/ui/recursion/recursive-static-definition.stderr
error[E0391]: cycle detected when const-evaluating `FOO`
  --> $DIR/recursive-static-definition.rs:11:23
   |
LL | pub static FOO: u32 = FOO;
   |                       ^^^
   |
   = note: ...which again requires const-evaluating `FOO`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
