src/test/ui/recursion/recursive-static-definition.rs
pub static FOO: u32 = FOO;
//~^ ERROR cycle detected when const-evaluating + checking `FOO`

fn main() {}
